[UTF-8][Japanese]

*Ver3.21 : 2019/xx/xx

-内部処理を見直し、2%-5%程度処理を高速化しました。
-起動時のパス解析を更新しました。
-静的出力（エクスポート）機能を更新しました。
-テーマ選択画面を少し見やすくしました。
-【記法】同じ内容の注釈でもセクションが異なれば別々に出力するようにしました。
-【Markdown】注釈記法を追加しました。
-【httpd/EXE】max_request設定を追加し、デーモンの自動再起動を内蔵しました。((長期運用したときメモリリークしないための措置です))
-【httpd/EXE】引数を若干変更しました。
-【httpd/EXE】adiary.conf.cgiが存在しない時、自動生成するようにしました。
-【plugin】JavaScriptプラグインを更新。
-【plugin】フリー入力プラグイン（メイン部）に表示条件を選択する機能が付きました。
-【plugin】メール通知プラグイン。sendmailコマンドを止め、SMTPで送信するようになりました。
-【Fix】JavaScript強制更新用queryが一部正しくない。
-【Fix】Perl5.8で動かない。（[https://adiary.adiary.jp/0405#c3:Thanks to 漁]）
-【Fix/デザイン編集】単一記事表示の編集リンクが移動できてしまう。
-【Fix/Markdown】コメントのみの行を、行処理してしまう。
-他

*Ver3.20 : 2018/12/27

-スタンドアローンHTTPサーバ機能を持った adiary.httpd.pl が開発されました。
-Windows用実行ファイル adiary.exe が開発されました。
-[bf:IE9, IE10のサポートを終了しました]（対策コードを削除しました）。
-数字のみのコンテンツkeyを許可しました。
--数字のみのコンテンツkeyを指定できるよう{[link:XXX]}記法を作成しました（[https://adiary.org/v3man/Satsuki-tag/:詳細]）。
--日付指定を path_info からqueryに変更しました。
--時刻による記事指定の仕様を変更し、{[tm:XXX]}記法を作成しました。
-高速化対策を行いました。（[https://developers.google.com/speed/pagespeed/insights/:Google PageSpeed Insights]）
--{<script defer>}を使用し、ページのロードを高速化しました。
--一部のCSSを遅延読み込みするよう変更しました。
--CGI動作以外でのライブラリの自動更新チェックを1秒1回だけ実施するよう変更しました。
--ブログ表示時に不要なjQuery UIをロードしなくなりました。
-【記法】「空行で段落処理（改行処理なし）」の時、行末スペース2つ以上を改行に置換するよう変更。
-【記法】Amazon紹介リンク作成機能（asinタグ、or URLフィルター機能）のリンク先を変更。
-【記法】URLの自動リンク機能を削除。((ほぼ使われてないようですし、実装にややこしい問題があるので削除しました。))
-【Markdown】リスト中のブランク行の後に先頭スペースを含む行があったとき、リストが続いているとみなすように変更。（本家準拠）
-【Markdown】途中空行を挟むリストがあった場合、リスト記号が異なれば違うリストと扱うように変更。((本家非準拠の動作ですが、この方が使いやすいと思うので影響の少ない範囲で変更しました。問題がある場合は skel/parser/markdown.html を skel.local/parser/markdown.html にコピーして編集してください。))
-【Markdown】リストの入れ子処理を変更し、本家の動作に近づけました。
-【アルバム】delキーでファイルやフォルダを削除できるようになりました。
-【plugin】webpushプラグインをRFC準拠で更新しました。EdgeHTML 17以降に対応しました。
-【plugin】twitterモジュールを更新しました。
-【plugin】360度写真用ビューアプラグインを更新しました。
-【fix】AmaoznのアフィリエイトIDに「.（ドット）」を含む場合、正しく保存されない。
-【fix】同時編集ロック機能での誤検出がまだ発生していた。
-【fix】ブログのコピーを作成した際、設定を保存しないとブログタイトルなどがブログ一覧に反映されない。