@@ -6,6 +6,8 @@
 -起動時のパス解析を更新しました。
 -静的出力（エクスポート）機能を更新しました。
 -テーマ選択画面を少し見やすくしました。
+-【記法】Markdown式の「```～```」等の[https://adiary.org/v3man/Satsuki/block:ブロック記法]に対応しました。((シンタックスハイライトや数式記法は人によってはよく使うにもかかわらず記述方法がややこしいので、覚えやすい記法をMarkdownより輸入しました。))
+-【記法】ブロック記法を若干改良しました。
 -【記法】同じ内容の注釈でもセクションが異なれば別々に出力するようにしました。
 -【Markdown】注釈記法を追加しました。
 -【httpd/EXE】max_request設定を追加し、デーモンの自動再起動を内蔵しました。((長期運用したときメモリリークしないための措置です))
